# rmintel360

./: .gitignore  README.md  pyproject.toml  requirements.txt  test questions.docx  ~$st questions.docx
backend/: __init__.py
backend/app/: main.py
backend/app/answer/: __init__.py  service.py
backend/app/api/: answer.py  chart.py  chat.py  curation.py  execution.py  export.py  feedback.py  governance.py  intent.py  metadata.py  semantic.py  sql.py
backend/app/cache/: __init__.py  service.py
backend/app/catalog/: __init__.py  search_index.py  service.py
backend/app/chart/: __init__.py  service.py
backend/app/conversation/: __init__.py  service.py
backend/app/core/: config.py
backend/app/curation/: __init__.py  service.py
backend/app/db/: connection.py
backend/app/execution/: __init__.py  service.py
backend/app/exporting/: __init__.py  service.py
backend/app/feedback/: __init__.py  service.py
backend/app/governance/: __init__.py  audit.py
backend/app/intent/: __init__.py  classifier.py
backend/app/llm/: __init__.py  client.py
backend/app/orchestration/: __init__.py  graph.py  llm_graph.py
docs/: application_architecture_handbook.html  application_test_questions.html  backend_beginner_guide.html  client_business_proposal.html  client_demo_video_script.html  client_metadata_lineage_architecture_guide.html  code_handbook.html  database_schema_guide.html  enterprise_metadata_layer_implementation_guide.html  final_codebase_walkthrough.html  phase_plan.md
frontend/: dev-server.mjs  index.html
frontend/assets/: app.js  styles.css
(+40 files in other folders)
